# aitrios-edge-device-core

./: .gitignore  .gitmodules  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PrivacyPolicy.md  README.md  SECURITY.md  meson.build  meson_options.txt
.devcontainer/raspi/: Dockerfile  arm64-cross  devcontainer.json
.github/: CODEOWNERS
.github/workflows/: build.yml
docs/: how_to_build_for_raspberry_pi.md  how_to_use_for_raspberry_pi.md  how_to_use_ota_sample.md
samples/ota/: README.md  edc_system_update.sh  edge-device-core.service
script/: mk-deb.sh  update_psm_db.py
src/: meson.build
src/evp-agent/: meson.build
src/evp-agent/include/: sdk_backdoor.h
src/evp-agent/include/evp_agent/: sdk_backdoor.h
src/evp-agent/src/: config.c  esf.c  esf.h  evp-agent.c  log.c  log.h  meson.build  notifications.c  notifications.h
subprojects/: base64.wrap  evp.wrap  flatcc.wrap  mbedtls.wrap  parson.wrap  quirc.wrap  wasm-micro-runtime.wrap
subprojects/packagefiles/base64/: 0001-base64_lib-Add-subdirectory-for-header-file.patch  meson.build
subprojects/packagefiles/evp/: 0001-Change-the-default-EVP-protocol-to-EVP2.patch  0002-fix-libevp-agent-sdkenc-build-dependency.patch  meson.build
subprojects/packagefiles/evp/configs/: linux.config
subprojects/packagefiles/evp/include/: meson.build
subprojects/packagefiles/evp/src/: meson.build
subprojects/packagefiles/evp/src/libevp-agent/: meson.build
subprojects/packagefiles/evp/src/libevp-agent/MQTT-C/: meson.build
subprojects/packagefiles/evp/src/libevp-utils/: meson.build
subprojects/packagefiles/evp/src/sdkenc/: meson.build
subprojects/packagefiles/flatcc/: meson.build
subprojects/packagefiles/flatcc/src/: meson.build
subprojects/packagefiles/flatcc/src/cli/: meson.build
subprojects/packagefiles/flatcc/src/compiler/: meson.build
subprojects/packagefiles/flatcc/src/runtime/: meson.build
subprojects/packagefiles/mbedtls/: 0001-Don-t-add-sysroot-path-when-searching-host-command.patch
subprojects/packagefiles/mbedtls/include/mbedtls/: user_config.h
subprojects/packagefiles/parson/: 0001-parson-Add-parson-lib-parson.h.patch
subprojects/packagefiles/quirc/: meson.build
subprojects/packagefiles/quirc/lib/: meson.build
subprojects/packagefiles/wasm-micro-runtime/: CMakeLists.txt
systemd/: README.md  edge-device-core.env  edge-device-core.service
udev/: 60-edc.rules
