cmake_minimum_required(VERSION 3.10)
project(wamr)

set (WAMR_BUILD_PLATFORM "linux")
set (WAMR_BUILD_INTERP 1)
set (WAMR_BUILD_FAST_INTERP 0)
set (WAMR_BUILD_AOT 1)
set (WAMR_BUILD_LIBC_BUILTIN 1)
set (WAMR_BUILD_LIBC_WASI 1)
set (WAMR_ROOT_DIR .)
set (WAMR_BUILD_LIB_WASI_THREADS 1)
set (WAMR_BUILD_THREAD_MGR 1)
set (WAMR_BUILD_SHARED_MEMORY 1)
set (WAMR_BUILD_WASI_NN 1)
set (WAMR_BUILD_WASI_NN_TFLITE 1)
set (WAMR_BUILD_WASI_NN_ONNXRUNTIME 1)
set (WAMR_BUILD_DUMP_CALL_STACK 1)
# Disable OpenCV to avoid cross-compilation complexity
set (WAMR_BUILD_WASI_NN_OPENCV OFF)
set (CMAKE_BUILD_TYPE Debug)

include (${WAMR_ROOT_DIR}/build-scripts/runtime_lib.cmake)
add_library(vmlib STATIC ${WAMR_RUNTIME_LIB_SOURCE})
